Added last project

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: compress
 <!DOCTYPE html>
 <html lang="{{page.lang}}">
   <head>
-    <title>{{ site.name }} | {{ page.subtitle }}</title>
+    <title>{{ site.name }} | {{ page.title }}</title>
 
     <!--Meta Tags-->
     {% include meta.html %}
