--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -69,7 +69,7 @@ layout: default
                 </div>
                 <h2 class="my-auto py-auto text-center card-header bg-success border-top d-md-none">{{page.skills-title}}</h2>
             </section>
-            <section id="section-projects" class="full-page d-flex flex-column align-items-center justify-content-center">
+            <section id="section-projects" class="full-page d-flex flex-column align-items-center justify-content-center bg-info">
                 <div class="container justify-self-start">
                     <div class="row">
                         <div class="col text-center">
@@ -98,7 +98,7 @@ layout: default
                     </div>
                 </div>
             </section>
-            <section id="section-works" class="full-page d-flex flex-column align-items-center justify-content-center">     
+            <section id="section-works" class="full-page d-flex flex-column align-items-center justify-content-center bg-default">     
                 <div class="container justify-self-start">
                     <div class="row">
                         <div class="col text-center">
