--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -17,7 +17,7 @@ layout: default
                     {% else %}
                         <li class="breadcrumb-item px-2"><a href="{{site.url}}/en">Home</a></li>
                     {% endif %}
-                    <li class="breadcrumb-item pl-2 pr-4">{% if page.lang == 'es' %}Trabajos{% else %}Works{% endif %}</li>
+                    <li class="breadcrumb-item pl-2 pr-4">{% if page.lang == 'es' %}Proyectos{% else %}Works{% endif %}</li>
                     <li class="breadcrumb-item active px-2">{{page.title}}</li>
                 </ol>
             </nav>
